chore(demo-todomvc): Clean up code

--- a/demo-todomvc/index.html
+++ b/demo-todomvc/index.html
@@ -7,13 +7,13 @@
 		<link rel="stylesheet" href="./css/index.css">
 	</head>
 	<body>
-		<todo-app class="todoapp"></todo-app>
+		<todo-demo class="todoapp"></todo-demo>
 		<footer class="info">
 			<p>Double-click to edit a todo</p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
     </footer>
 
-    <script src="./js/todo-app.js"></script>
+    <script src="./js/todo-demo.js"></script>
 		<script src="./js/todo-list.js"></script>
 		<script src="./js/todo-item.js"></script>
 	</body>
